--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "saikatkundu"]
-	path = saikatkundu
-	url = https://github.com/kundusaikat/saikatkundu
+[submodule "customportfolio"]
+	path = customportfolio
+	url = https://github.com/kundusaikat/customportfolio
